--- a/css/styles.css
+++ b/css/styles.css
@@ -415,7 +415,8 @@ address {
 }
 
 .social-icon {
-    width: 20px;    height: 20px;
+    width: 20px;    
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -456,7 +457,7 @@ address {
     width: 100%;
     height: 70px;
     bottom: 70px;
-    z-index: 100;
+    z-index: 10;
 
     background: rgba(47, 48, 58, 0.8);
 
@@ -704,12 +705,14 @@ address {
 /* MODAL */
 
 .backdrop {
-    position: fixed;
+    position: relative;
+    margin: auto;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
+    
     opacity: 1;
     visibility: visible;
 }
@@ -718,4 +721,52 @@ address {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    
+}
+
+.modal {
+    width: 528px;
+    height: 581px;
+    background-color: var(--white-color);
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    margin-top: 8px;
+    margin-right: 8px;
+    margin-left: auto;
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+    background-color: var(--accent-color);
+    border-radius: 50%;
+}
+
+.modal-icon {
+    width: 18px;    
+    height: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: var(--black-color);
+}
+
+.modal-btn:hover .modal-icon,
+.modal-btn:focus .modal-icon {
+    fill: var(--white-color);
+    background-color: var(--accent-color);
 }
