--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
 
     /* DURACTION + TIMING-FUNCTION */
     --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --modal-window: 500ms linear;
 }
 
 /* RESET */
@@ -285,7 +286,7 @@ address {
 }
 
 .hero-title {
-    width: 696px;
+    max-width: 696px;
     margin-bottom: 30px;
 
     color: var(--white-color);
@@ -457,7 +458,6 @@ address {
     width: 100%;
     height: 70px;
     bottom: 70px;
-    z-index: 10;
 
     background: rgba(47, 48, 58, 0.8);
 
@@ -704,8 +704,12 @@ address {
 
 /* MODAL */
 
+.no-scroll {
+    overflow: hidden;
+}
+
 .backdrop {
-    position: relative;
+    position: fixed;
     margin: auto;
     width: 100vw;
     height: 100vh;
@@ -714,7 +718,7 @@ address {
     background-color: rgba(0, 0, 0, 0.2);
     
     opacity: 1;
-    visibility: visible;
+    transition: opacity var(--modal-window), visibility var(--modal-window);
 }
 
 .backdrop.is-hidden {
@@ -729,10 +733,15 @@ address {
     height: 581px;
     background-color: var(--white-color);
 
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: transform var(--modal-window);
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(1.5) rotate(90deg);
 }
 
 .modal-btn {
@@ -769,4 +778,46 @@ address {
 .modal-btn:focus .modal-icon {
     fill: var(--white-color);
     background-color: var(--accent-color);
+}
+
+@keyframes scaleModal {
+  0% {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(0.5);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes opacityModal {
+  0% {
+    transform: opacity(0);
+  }
+
+  50% {
+    transform: opacity(0.5);
+  }
+
+  100% {
+    transform: opacity(1);
+  }
+}
+
+@keyframes translateModal {
+  0% {
+    transform: translate(0 0);
+  }
+
+  50% {
+    transform: translate(-25% -25%);
+  }
+
+  100% {
+    transform: translate(-50% -50%);
+  }
 }
