--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ h1, h2, h3, h4, h5, h6, p {
 .list {
     margin: 0;
     padding-left: 0;
+    
     list-style: none;
 }
 
@@ -49,8 +50,8 @@ h1, h2, h3, h4, h5, h6, p {
 /* GENERAL STYLES */
 
 body {
-    font-family: 'Roboto', sans-serif;
     font-size: 14px;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
     color: var(--sonic-silver-color);
 
@@ -71,6 +72,7 @@ address {
 
 .visually-hidden {
     position: absolute;
+
     width: 1px;
     height: 1px;
     margin: -1px;
@@ -132,8 +134,8 @@ address {
 .logo-common-part,
 .logo-header-part,
 .logo-footer-part {
-    font-family: 'Raleway', sans-serif;
     font-weight: 700;
+    font-family: 'Raleway', sans-serif;
     font-size: 26px;
     line-height: 1.17;
     text-decoration: none;
@@ -173,6 +175,7 @@ address {
 
 .nav-link::after {
     content: "";
+
     position: absolute;
     width: 100%;
     height: 4px;
@@ -287,23 +290,25 @@ address {
     max-width: 696px;
     margin-bottom: 30px;
 
-    color: var(--white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    color: var(--white-color);
 }
 
 .hero-btn {
     width: 200px;
     height: 50px;
-    color: var(--white-color);
-    background-color: var(--accent-color);
+
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
+    color: var(--white-color);
+
+    background-color: var(--accent-color);
 }
 
 .hero-btn:hover,
@@ -414,11 +419,12 @@ address {
 }
 
 .social-icon {
-    width: 20px;    
-    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 20px;    
+    height: 20px;
+
     fill: var(--icon-color);
 }
 
@@ -427,6 +433,7 @@ address {
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
     fill: var(--white-color);
+
     background-color: var(--accent-color);
 }
 
@@ -449,23 +456,21 @@ address {
 }
 
 .text-works {
+    position: relative;
+    bottom: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
     width: 100%;
     height: 70px;
-    bottom: 70px;
-
-    background: rgba(47,48,58,.8);
-
-    font-weight: 700;
+    
+   font-weight: 700;
     line-height: 1.14;
     text-align: center;
     text-transform: uppercase;
-
     color: var(--white-color);
 
+    background: rgba(47,48,58,.8);
 }
 
 /* TEAM */
@@ -513,10 +518,10 @@ address {
 
 .link.clients {
     display: flex;
+    justify-content: center;
+    align-items: center; 
     width: 100%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
 }
 
 .icon.clients {
@@ -524,7 +529,6 @@ address {
     height: 60px;
 
     fill: var(--icon-color);
-    
 }
 
 .link.clients:hover .icon.clients,
@@ -557,22 +561,22 @@ address {
     padding-bottom: 6px;
     padding-left: 22px;
 
-    background-color: var(--whisper-color);
-    color: var(--light-black-color);
-
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
     text-align: center;
+    color: var(--light-black-color);
+
+    background-color: var(--whisper-color);
     border: 1px solid var(--whisper-color);
     border-radius: 4px;
 }
 
 .button.filter:hover,
-.button.filter:focus
-{
-    background-color: var(--accent-btn-color);
+.button.filter:focus {
     color: var(--white-color);
+
+    background-color: var(--accent-btn-color);
     border: 1px solid var(--black-color);
     box-shadow: 0px 3px 1px rgba(0,0,0,.1), 0px 1px 2px rgba(0,0,0,.08), 0px 2px 2px rgba(0,0,0,.12);
     border-radius: 4px;
@@ -606,6 +610,7 @@ address {
 
 .project-portfolio {
     position: relative;
+
     overflow: hidden;
 }
 
@@ -675,10 +680,9 @@ address {
 }
 
 .text.portfolio {
-    color: var(--section-title-color);
-
     font-size: 16px;
     line-height: 1.88;
+    color: var(--section-title-color);
 }
 
 /* FOOTER */
@@ -686,6 +690,7 @@ address {
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
+
     background-color: var(--footer-bg-color);
 }
 
@@ -695,6 +700,7 @@ address {
 }
 .footer a {
     margin-bottom: 20px;
+
     text-decoration: none;
 }
 
@@ -711,15 +717,13 @@ address {
 }
 
 .footer-address {
-    color: var(--white-color);
-
     line-height: 1.71;
+    color: var(--white-color);
 }
 
 .footer-address-contacts {
-    color: var(--footer-adrees-color);
-
     line-height: 1.71;
+    color: var(--footer-adrees-color);
 }
 
 .footer-address:hover,
@@ -733,10 +737,10 @@ address {
     display: block;
     margin-top: 12px;
     margin-bottom: 20px;
+    
     font-weight: 700;
     line-height: 1.14;
     text-transform: uppercase;
-
     color: var(--white-color);
 }
 
@@ -756,11 +760,14 @@ address {
 
 .backdrop {
     position: fixed;
-    margin: auto;
-    width: 100vw;
-    height: 100vh;
     top: 0;
     left: 0;
+
+    width: 100vw;
+    height: 100vh;
+    margin: auto;
+
+
     background-color: rgba(0,0,0,.2);
     
     opacity: 1;
@@ -775,13 +782,15 @@ address {
 }
 
 .modal {
-    width: 528px;
-    height: 581px;
-    background-color: var(--white-color);
-
     position: absolute;
     top: 50%;
     left: 50%;
+
+    width: 528px;
+    height: 581px;
+
+    background-color: var(--white-color);
+
     transform: translate(-50%,-50%);
     transition: transform var(--modal-window);
 }
@@ -794,15 +803,15 @@ address {
     display: flex;
     justify-content: center;
     align-items: center;
-    
     width: 30px;
     height: 30px;
-    border-radius: 15px;
-    background: #FFFFFF;
-    border: 1px solid rgba(0,0,0,.1);
     margin-top: 8px;
     margin-right: 8px;
     margin-left: auto;
+
+    border-radius: 15px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0,0,0,.1);
 }
 
 .modal-btn:hover,
@@ -812,11 +821,12 @@ address {
 }
 
 .modal-icon {
-    width: 18px;    
-    height: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 18px;    
+    height: 18px;
+
     fill: var(--black-color);
 }
 
