--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,8 @@ address {
     margin-right: 50px;
 }
 
-.nav-link {
+.nav-link,
+.nav-link.current {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -165,6 +166,42 @@ address {
     line-height: 1.17;
     letter-spacing: 0.02em;
     text-decoration: none;
+    
+    transition: color var(--transition);
+}
+/* АНИМАЦИЯ НАВИГАЦИИ */
+/* .nav-link::after {
+    content: "";
+
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: 0;
+
+    background: var(--accent-color);
+    border: 1px solid var(--white-color);
+    box-sizing: border-box;
+    border-radius: 2px;
+
+    transform: scale(0);
+    transition: transform var(--transition);
+} */
+
+.nav-link.current::after {
+    content: "";
+
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    width: 100%;
+    height: 4px;
+
+    background: var(--accent-color);
+    border: 1px solid var(--white-color);
+    box-sizing: border-box;
+    border-radius: 2px;
 }
 
 .nav-link:hover,
@@ -173,43 +210,7 @@ address {
     color: var(--accent-color);
 }
 
-.nav-link::after {
-    content: "";
-
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    left: 0;
-    bottom: 0;
-
-    background: var(--accent-color);
-    border: 1px solid var(--white-color);
-    box-sizing: border-box;
-    border-radius: 2px;
-    transform: scale(0);
-    transition: transform var(--transition);
-}
-
 .nav-link:hover::after {
-    transform: scale(1);
-}
-
-.nav-link.current::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    left: 0;
-    bottom: 0;
-
-    background: var(--accent-color);
-    border: 1px solid var(--white-color);
-    box-sizing: border-box;
-    border-radius: 2px;
-}
-
-.nav-link:hover::after,
-.nav-link.current:hover::after {
     transform: scale(1);
 }
 
@@ -241,6 +242,8 @@ address {
     font-weight: 500;
     line-height: 1.17;
     letter-spacing: 0.02em;
+
+    transition: color var(--transition);
 }
 
 .contacts-link:not(:last-child) {
@@ -309,6 +312,8 @@ address {
     color: var(--white-color);
 
     background-color: var(--accent-color);
+
+    transition: background-color var(--transition);
 }
 
 .hero-btn:hover,
@@ -410,6 +415,8 @@ address {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    transition: background-color var(--transition);
 }
 
 .social-link:hover,
@@ -426,6 +433,8 @@ address {
     height: 20px;
 
     fill: var(--icon-color);
+
+    transition: fill var(--transition);
 }
 
 
@@ -522,6 +531,8 @@ address {
     align-items: center; 
     width: 100%;
     height: 100%;
+
+    transition: border var(--transition), firter var(--transition), border-radius var(--transition);
 }
 
 .icon.clients {
@@ -529,6 +540,8 @@ address {
     height: 60px;
 
     fill: var(--icon-color);
+
+    transition: fill var(--transition);
 }
 
 .link.clients:hover .icon.clients,
@@ -570,6 +583,8 @@ address {
     background-color: var(--whisper-color);
     border: 1px solid var(--whisper-color);
     border-radius: 4px;
+
+    transition: color var(--transition), background-color var(--transition), border var(--transition), box-shadoW var(--transition), border-radius var(--transition);
 }
 
 .button.filter:hover,
@@ -597,10 +612,13 @@ address {
     width: calc(100% / 3 - 30px);
 
     border: 1px solid #eee;
+
+    transition: box-shadow var(--transition);
 }
 
 
-.item.portfolio:hover  {
+.item.portfolio:hover, 
+.item.portfolio:focus {
     box-shadow: 0px 1px 1px rgba(0,0,0,.12), 0px 4px 4px rgba(0,0,0,.06), 1px 4px 6px rgba(0,0,0,.16);
 }
 
@@ -719,11 +737,15 @@ address {
 .footer-address {
     line-height: 1.71;
     color: var(--white-color);
+
+    transition: color var(--transition);
 }
 
 .footer-address-contacts {
     line-height: 1.71;
     color: var(--footer-adrees-color);
+
+    transition: color var(--transition);
 }
 
 .footer-address:hover,
@@ -812,6 +834,8 @@ address {
     border-radius: 15px;
     background: #FFFFFF;
     border: 1px solid rgba(0,0,0,.1);
+
+    transition: background-color var(--transition), border-radius var(--transition);
 }
 
 .modal-btn:hover,
@@ -828,6 +852,8 @@ address {
     height: 18px;
 
     fill: var(--black-color);
+
+    transition: fill var(--transition), background-color var(--transition);
 }
 
 .modal-btn:hover .modal-icon,
